# airtable_to_tableau

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  start_web.py
configs/: buildings.json
src/airtable_to_tableau/: cli.py
src/airtable_to_tableau/dashboards/: building_sync.py  space_sync.py
src/airtable_to_tableau/libs/: airtable_metadata.py  config_utils.py  export_hyper.py  fetch_airtable.py  file_stats.py  flatten_utils.py  read_hyper.py  sanitize_dataframe.py  table_name.py  transform_utils.py  type_to_json.py
src/airtable_to_tableau/web/: app.py  routes.py
src/airtable_to_tableau/web/static/css/: styles.css
src/airtable_to_tableau/web/static/scripts/: init_editor.js  validate_config.js
src/airtable_to_tableau/web/templates/: config_create.html  config_list.html  config_view.html  file_viewer.html  help.html  index.html  layout.html  run_export.html  upload_config.html  view_hyper.html
tests/: test_sanitize_dataframe.py
