[project]
name = "airtable-to-tableau"
version = "0.2.0"
description = "CLI and web app to export Airtable data to Tableau Hyper or Snowflake"
readme = "README.md"
authors = [{ name = "Jeff Garner", email = "you@example.com" }]
license = "MIT"
requires-python = ">=3.8"

dependencies = [
  "pandas>=2.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "tableauhyperapi>=0.0.17070",
  "snowflake-connector-python>=3.0.0",
  "Flask>=2.3.0",
  "Flask-Bootstrap>=3.3.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "setuptools>=68.0.0",
  "build>=1.0.0",
  "argparse; python_version<'3.10'"
]

[project.scripts]
airtable-export = "airtable_to_tableau.cli:main"

[build-system]
requires = ["setuptools>=68.0.0", "build>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

